# crondop

./: .gitignore  Cargo.toml  README.md  SUMMARY.MD
.github/workflows/: ci.yml  sync-homebrew-tap.yml
Formula/: crondrop.rb
assets/: ATTRIBUTION.md
crates/crondrop-cli/: Cargo.toml
crates/crondrop-cli/src/: main.rs
crates/crondrop-core/: Cargo.toml
crates/crondrop-core/src/: config.rs  lib.rs  paths.rs  schedule.rs
crates/crondrop-daemon/: Cargo.toml
crates/crondrop-daemon/src/: lib.rs
crates/crondrop-platform/: Cargo.toml
crates/crondrop-platform/src/: lib.rs
crates/crondrop-ui/: Cargo.toml
crates/crondrop-ui/src/: lib.rs
docs/: development.md  user-guide.md
packaging/: README.md
packaging/homebrew-tap/: README.md
packaging/macos/: com.crondrop.plist
packaging/windows/: crondrop.cmd
scripts/: package-release.ps1  package-release.sh  render-homebrew-formula.sh  update-homebrew-tap.sh
