[workspace]
members = [
    "crates/crondrop-cli",
    "crates/crondrop-core",
    "crates/crondrop-daemon",
    "crates/crondrop-ui",
    "crates/crondrop-platform",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.8"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
iced = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tray-icon = "0.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
winit = "0.30"
libc = "0.2"
rodio = "0.20"
