[package]
name = "crondrop"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
crondrop-core = { path = "../crondrop-core" }
crondrop-daemon = { path = "../crondrop-daemon" }
crondrop-platform = { path = "../crondrop-platform" }
crondrop-ui = { path = "../crondrop-ui" }
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

